# slack-logger

./: pyproject.toml
slack_logger/: slacklogger.py
tests/: test_slack_logger.py
