[tool.poetry]
name = "slack_logger"
version = "0.1.0"
description = ""
authors = ["sakthiRathinam <sakthiratnam050@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
slack = "^0.0.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
